docs: complete cv

--- a/style.css
+++ b/style.css
@@ -2,17 +2,15 @@
 	box-sizing: border-box;
 }
 
-html {
-	scroll-behavior: smooth; 
-}
-
 body {
 	font-family: 'Montserrat', sans-serif;
 	min-height: 100vh;
-	margin: 0; padding: 0;
+	margin: 0; 
+	padding: 0;
 	display: flex;
    flex-direction: column;
    justify-content: space-between;
+
 }
 
 .container {
@@ -20,6 +18,13 @@ body {
 	margin: 0 auto;
 }
 
+.main-container {
+	max-width: 900px;
+	margin: 0 auto;
+}
+.header {
+	background-color: rgb(105, 67, 105);
+}
 .nav-list {
 	display: flex;
 	justify-content: flex-end;
@@ -30,12 +35,37 @@ body {
 .nav-link {
 	padding: 0 20px;
 	line-height: 50px;
-	color: black;
+	color: white;
 	text-decoration: none;
 	transition: .3s;
 }
 
+h1 {
+	font-size: 40px;
+}
+.photo {
+	width: 250px;
+}
 
+.footer {
+	background-color: rgb(105, 67, 105);
+	color: white;	
+}
 
+.github {
+	color: white;
+	text-decoration: none;
+	font-size: 18px;
+}
 
+.logo {
+	width: 150px;
+}
+
+.container-footer {
+	padding: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
 
